# azure-ai-model-pricing-dashboard

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/collect/: __init__.py  cli.py  cost_details.py  html_report.py  normalize.py  pricesheet.py  retail_prices.py  subscriptions.py
src/common/: auth.py  cache.py  logging.py
src/dashboard/: app.py
tests/: test_date_range.py  test_parsing.py
